# lie-flow-experimenting

./: .gitignore  DESIGN.md  README.md  pyproject.toml
autoresearch/loop-260701-1738/: evals-summary.md  handoff.json  results.tsv
autoresearch/loop-hybrid-alpha-260702-0012/: evals-summary.md  handoff.json  results.tsv
autoresearch/loop-hybrid-fallback-260701-2314/: results.tsv
autoresearch/loop-hybrid-fallback-260701-2324/: evals-summary.md  handoff.json  results.tsv
autoresearch/loop-hybrid-fallback-260701-2329/: evals-summary.md  handoff.json  results.tsv
autoresearch/loop-hybrid-fallback-260701-2333/: evals-summary.md  handoff.json  results.tsv
autoresearch/loop-lieflow-honest-260702-0035/: handoff.json  results.tsv
scripts/: analyze_regime_symmetry.py  audit_backtest_alignment.py  autoresearch_hybrid_alpha.py  autoresearch_hybrid_fallback.py  autoresearch_lieflow_honest.py  autoresearch_lieflow_sharpe_return.py  autoresearch_lieflow_target.py  autoresearch_lieflow_v2.py  autoresearch_lieflow_v2_round2.py  autoresearch_loop.py  autoresearch_pnl_sharpe.py  autoresearch_regime_switcher.py  autoresearch_splits.py  autoresearch_timing_overlay.py  backtest_strategy.py  benchmark_latency.py  benchmark_recruiting.py  build_cross_section_clouds.py  build_pre2023_clouds.py  build_synthetic_factor_cloud.py  cache_inference.py  download_equity_panel.py  eval_c4_nsteps_sweep.py  eval_multiwindow.py  eval_strategy.py  evaluate_symmetry_recovery.py  generate_trading_signals.py  run_experiment.sh  run_lieflow_target_focused.py  sweep_strategy.py  validate_strategies.py
(+44 files in other folders)
